--- a/dev_test.ipynb
+++ b/dev_test.ipynb
@@ -115,8 +115,95 @@
     }
    ],
    "source": [
-    "len(trainset)"
+    "len(trainset)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "start_time = time.time()\n",
+    "data_dir='../data/imagenette2'\n",
+    "dataset='imagenet'\n",
+    "local_ep = 5\n",
+    "local_bs = 16\n",
+    "num_users = 1\n",
+    "epochs = 210\n",
+    "frac = 0.2\n",
+    "iid = 1\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "# load dataset and user groups\n",
+    "train_dataset, test_dataset, _ = get_dataset(\n",
+    "    data_dir=data_dir,\n",
+    "    dataset=dataset,\n",
+    "    num_users=num_users,\n",
+    "    iid=iid\n",
+    ")\n",
+    "\n",
+    "# BUILD MODEL\n",
+    "base_model = resnext50(\n",
+    "    baseWidth=4,\n",
+    "    cardinality=32)\n",
+    "\n",
+    "# Set the model to train and send it to device.\n",
+    "if torch.cuda.is_available():\n",
+    "    base_model = torch.nn.DataParallel(base_model).cuda()\n",
+    "else:\n",
+    "    base_model.to(device)\n",
+    "\n",
+    "file_name = './results'+\\\n",
+    "    f'/imagenet_resnext_{epochs}_S[{frac}]_iid[{iid}]_E[{local_ep}]_B[{local_bs}].pkl'\n",
+    "\n",
+    "with open(file_name, 'rb') as f:\n",
+    "    logger = pickle.load(f)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "acc = logger['acc']\n",
+    "x = np.arange(epochs)\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(12, 12))\n",
+    "plt.plot(x, acc)\n",
+    "plt.xlabel('epochs', fontsize=16)\n",
+    "plt.ylabel('Accuracy', fontsize=16)\n",
+    "plt.grid()\n",
+    "plt.savefig('results/base_average_acc.png', dpi=300)\n",
+    "plt.show()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "len(trainset)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
